style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 26px;
  font-weight: 400;
  margin: 0 10px 10px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;
}

main img {
  width: 100%;
}

/* ---  Groups & Items --- */

.group {
  display: flex;
  flex-direction: column;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
}

/* -------  Navigation ------- */

header {
  background-color: #ff385c;
  padding: 20px 20px 0 20px;
  text-align: center;
}

header nav {
  display: flex;
  justify-content: center;
}

header nav ul {
  display: flex;
}

.logo {
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
}

header nav ul li {
  list-style-type: none;
}

header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}

/* -------  Search Form ------- */
form {
  border: 2px solid #ff385c;
  padding: 10px;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-between;
}

form div {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 20px;
}

form label {
  font-weight: bold;
}

form select,
form input {
  width: 180px;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
  max-width: 100px;
}

/* -------  Footer ------- */

footer {
  background-color: #ff385c;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */

@media all and (min-width: 480px) {
  header {
    display: flex;
    justify-content: space-between;
    padding: 0 30px;
  }

  header .logo {
    font-size: 42px;
  }

  form {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: space-between;
  }

  form div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width:fit-content;
    margin: 0;
  }

  section .container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }

  #ideas .container .item{
    min-width: 40%;
  }

}

